Bug#52502 Performance schema does not start with large mutex_instance buffers

This is a performance issue affecting scalability.

Prior to this fix, the performance schema code did not scale well
when a very large number of instruments are created in the code.

The root cause was create_mutex() spinning "forever",
trying to find an empty slot in a full mutex_array.

With this fix:
- functions like create_mutex() abort sooner,
  when used with a very large array which is full or almost full.
- randomize_index() has been revised to improve
  the statistical spread of values in the mutex_array.  
  See the comments in the code for details.

Other allocation functions similar to create_mutex()
have been also fixed.

No MTR test case provided (performance scalability issue).
Fix tested manually.